--- a/PRNAssG8/PRNAssG8/PRNAssG8.csproj
+++ b/PRNAssG8/PRNAssG8/PRNAssG8.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\img\product\M-i-Ch-nh-H-ng-Lenovo-LP40-TWS-Tai-Nghe-Kh-ng-D-y-Bluetooth.jpg_Q90.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -30,14 +34,12 @@
     <None Update="Views\img\M-i-Ch-nh-H-ng-Lenovo-LP40-TWS-Tai-Nghe-Kh-ng-D-y-Bluetooth.jpg_Q90.jpg">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update="Views\Product\img\M-i-Ch-nh-H-ng-Lenovo-LP40-TWS-Tai-Nghe-Kh-ng-D-y-Bluetooth.jpg_Q90.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
-    <Folder Include="Views\Product\img\" />
+    <None Include="wwwroot\img\product\M-i-Ch-nh-H-ng-Lenovo-LP40-TWS-Tai-Nghe-Kh-ng-D-y-Bluetooth.jpg_Q90.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
