--- a/PRNAssG8/PRNAssG8/PRNAssG8.csproj
+++ b/PRNAssG8/PRNAssG8/PRNAssG8.csproj
@@ -1,12 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Content Remove="wwwroot\img\product\M-i-Ch-nh-H-ng-Lenovo-LP40-TWS-Tai-Nghe-Kh-ng-D-y-Bluetooth.jpg_Q90.jpg" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.11">
@@ -22,24 +18,6 @@
     <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Content\css\bootstrap.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Views\css\bootstrap.css">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="Views\img\M-i-Ch-nh-H-ng-Lenovo-LP40-TWS-Tai-Nghe-Kh-ng-D-y-Bluetooth.jpg_Q90.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="wwwroot\img\product\M-i-Ch-nh-H-ng-Lenovo-LP40-TWS-Tai-Nghe-Kh-ng-D-y-Bluetooth.jpg_Q90.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
