--- a/PRNAssG8/PRNAssG8/appsettings.json
+++ b/PRNAssG8/PRNAssG8/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PRN2": "server=TVG-LAPTOP\\TVG;database=PRN2;uid=sa;pwd=123"
+    "PRN2": "server=DESKTOP-2VK7TUP\\SQLEXPRESS;database=PRN2;uid=sa;pwd=123"
   }
 }
 //DESKTOP-2VK7TUP\\SQLEXPRESS
